README and tidy up

--- a/README.ipynb
+++ b/README.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e2abed",
+   "id": "e58cb7d1",
    "metadata": {},
    "source": [
     "**Program Implementation:**"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bede9f36",
+   "id": "149d48d9",
    "metadata": {},
    "source": [
     "- The string slices are applied (the last two digits being cents) [[Ref 1]](#ref2.1)\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e2cf02",
+   "id": "830c2ffe",
    "metadata": {},
    "source": [
     "**References:**\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc8e12b8",
+   "id": "c7a31a91",
    "metadata": {},
    "source": [
     "- - - \n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f78dcfb3",
+   "id": "c3e2d089",
    "metadata": {},
    "source": [
     "**Program Implementation:**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8a550e3e",
+   "id": "7f1023fb",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8fccf20c",
+   "id": "2d5ecf75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ca1f53ce",
+   "id": "cfc65f56",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
    ],
    "source": [
     "# The outputted string consists of the last four digits right justified with the number_\n",
-    "# of padded zeroes before it specified based on the length of the user inputted string.\n",
+    "# padded with X with the overall length specified by length of user inputted string.\n",
     "output_string = end_chars.rjust(input_string_length, 'X')\n",
     "\n",
     "# Print the resulting output string to screen\n",
@@ -289,19 +289,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba8be4e",
+   "id": "ec57394d",
    "metadata": {},
    "source": [
     "**Program Notes:**\n",
     "\n",
-    "- The string is padded out before the last 4 digits by using .rjust() method [[Ref 1]](#ref3.1)\n",
-    "- No error checking is performed for non digit characters in the input.\n",
-    "- Any inputted number less than 4 digits will just display those digits inputted."
+    "- The last four digits are right-justified and padded out before the last 4 digits by using .rjust() method [[Ref 1]](#ref3.1)\n",
+    "- No error checking is performed for non-digit characters in the input. \n",
+    "- Any inputted number less than 4 digits will display just those digits inputted."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53186041",
+   "id": "f510e20b",
    "metadata": {},
    "source": [
     "**References:**\n",
@@ -309,12 +309,233 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7b952bd",
+   "metadata": {},
+   "source": [
+    "- - - \n",
+    "\n",
+    "## Task 4 (collatz.py) <a id=\"task4\"></a> <span style=\"font-size: 8pt;\"> [[TOC]](#toc)</span>\n",
+    "\n",
+    "\n",
+    "**Task Description:**\n",
+    "\n",
+    "<i>\n",
+    " Write a program, called collatz.py, that asks the user to input any positive integer and outputs the successive values of the following calculation.\n",
+    "\n",
+    "At each step calculate the next value by taking the current value and, if it is even, divide it by two, but if it is odd, multiply it by three and add one.\n",
+    "\n",
+    "Have the program end if the current value is one.\n",
+    "\n",
+    "Push the program in your pands-problem-sheet GitHub repository (like you do for all the weekly tasks).\n",
+    "\n",
+    "Example of it running: </i> \n",
+    "\n",
+    "```\n",
+    "$ python collatz.py\n",
+    "\n",
+    "Please enter a positive integer: 10\n",
+    "\n",
+    "10 5 16 8 4 2 1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6efa8f8c",
+   "metadata": {},
+   "source": [
+    "**Program Implementation:**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "70e43560",
+   "execution_count": 25,
+   "id": "ad454830",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a positive integer: 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the variable user_list as the list for the calculated values\n",
+    "user_list = []\n",
+    "\n",
+    "# Initialise the user_inp so that the loop to ask for user input will run\n",
+    "user_inp = -1\n",
+    "\n",
+    "# Execute this loop until the user inputs a positive int\n",
+    "while user_inp <= 0:\n",
+    "    user_inp = int(input(\"Please enter a positive integer: \"))\n",
+    "\n",
+    "# Store the user input in the defined list\n",
+    "user_list.append(user_inp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "72fb286f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This loop applies the Collatz rules [1] - it will loop while the calculated number is not equal to 1\n",
+    "while user_inp != 1:\n",
+    "    # Checks if the number is positive or negative and apply appropriate collatz \n",
+    "    if user_inp % 2 == 0:\n",
+    "        user_inp = int(user_inp / 2)\n",
+    "    else:\n",
+    "        user_inp = int((user_inp * 3) + 1)\n",
+    "    # Appends the calculated value to the list    \n",
+    "    user_list.append(user_inp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "be6b7ec0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123 370 185 556 278 139 418 209 628 314 157 472 236 118 59 178 89 268 134 67 202 101 304 152 76 38 19 58 29 88 44 22 11 34 17 52 26 13 40 20 10 5 16 8 4 2 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print out the calculated values in the list in the required format on the same line \n",
+    "# by looping over the values in the list. \n",
+    "for item in user_list:\n",
+    "    # The seperator for each instance of print is a space rather than the default newline [2]\n",
+    "    print(item, end=\" \")\n",
+    "\n",
+    "# Print statement to go to next line after printing the last value\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc53fbca",
+   "metadata": {},
+   "source": [
+    "**Program Notes:**\n",
+    "- The program applies the Collatz conjecture on any positive integer [[Ref 1]](#ref4.1)\n",
+    "- The program will throw an error if a float type is entered. \n",
+    "- If a negative value is entered, the input message will repeat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "190dfdbe",
+   "metadata": {},
+   "source": [
+    "**References:**\n",
+    "1. The Collatz Conjecture https://www.youtube.com/watch?v=094y1Z2wpJg&t=1\n",
+    "2. Print on same line https://w3cschoool.com/tutorial/how-to-print-in-same-line-in-python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3cdfcdd",
+   "metadata": {},
+   "source": [
+    "- - - \n",
+    "\n",
+    "## Task 5 (weekday.py) <a id=\"task5\"></a> <span style=\"font-size: 8pt;\"> [[TOC]](#toc)</span>\n",
+    "\n",
+    "\n",
+    "**Task Description:**\n",
+    "\n",
+    "<i>\n",
+    "Write a program that outputs whether or not today is a weekday. (The program should be called weekday.py)\n",
+    "\n",
+    "(You will need to search the web to find how you work out what day it is)\n",
+    "\n",
+    "An example of running this program on a Thursday is given below.</i> \n",
+    "\n",
+    "```\n",
+    "$ python weekday.py\n",
+    "Yes, unfortunately today is a weekday.\n",
+    "\n",
+    "\n",
+    "An example of running it on a Saturday is as follows:\n",
+    "\n",
+    "$ python weekday.py\n",
+    "It is the weekend, yay!\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "174e2298",
+   "metadata": {},
+   "source": [
+    "**Program Implementation:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a4e7062a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the datetime class from the datetime module [1]\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Assign the current date and time to dt\n",
+    "dt = datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ec4daa59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the weekday method to find day of week - returns an integer [1]\n",
+    "x = dt.weekday()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0926194b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is the weekend, yay!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checks value of x - prints accordingly (Monday is 0 etc)\n",
+    "if x == 5 or x == 6:\n",
+    "    print(\"It is the weekend, yay!\")\n",
+    "else:\n",
+    "    print(\"Yes, unfortunately today is a weekday.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97dd442c",
+   "metadata": {},
+   "source": [
+    "**References:**\n",
+    "1. Find day of the week: https://pynative.com/python-get-the-day-of-week"
+   ]
   }
  ],
  "metadata": {
