README and tidy

--- a/README.ipynb
+++ b/README.ipynb
@@ -245,9 +245,7 @@
    "source": [
     "# Prompt the user for a 10 digit account number. This input is stored as a string variable\n",
     "user_input = input(\"Please enter a 10 digit account number: \")\n",
-    "\n",
-    "# Strip any whitespace from the start and the end of the string input.\n",
-    "user_input = user_input.strip()"
+    "\n"
    ]
   },
   {
@@ -257,28 +255,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Strip any whitespace from the start and the end of the string input.\n",
+    "user_input = user_input.strip()\n",
+    "\n",
     "# Find the length of the user inputted value\n",
     "input_string_length = len(user_input)\n",
     "\n",
     "# Isolate the last 4 characters of the inputted string with a string slice\n",
-    "end_chars = user_input[-4:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "cfc65f56",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XXXXXX7890\n"
-     ]
-    }
-   ],
-   "source": [
+    "end_chars = user_input[-4:]\n",
+    "\n",
     "# The outputted string consists of the last four digits right justified with the number_\n",
     "# padded with X with the overall length specified by length of user inputted string.\n",
     "output_string = end_chars.rjust(input_string_length, 'X')\n",
@@ -384,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This loop applies the Collatz rules [1] - it will loop while the calculated number is not equal to 1\n",
+    "# This loop applies the Collatz rules [Ref 1] - it will loop while the calculated number is not equal to 1\n",
     "while user_inp != 1:\n",
     "    # Checks if the number is positive or negative and apply appropriate collatz \n",
     "    if user_inp % 2 == 0:\n",
@@ -392,28 +377,12 @@
     "    else:\n",
     "        user_inp = int((user_inp * 3) + 1)\n",
     "    # Appends the calculated value to the list    \n",
-    "    user_list.append(user_inp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "be6b7ec0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123 370 185 556 278 139 418 209 628 314 157 472 236 118 59 178 89 268 134 67 202 101 304 152 76 38 19 58 29 88 44 22 11 34 17 52 26 13 40 20 10 5 16 8 4 2 1 \n"
-     ]
-    }
-   ],
-   "source": [
+    "    user_list.append(user_inp)\n",
+    "    \n",
     "# Print out the calculated values in the list in the required format on the same line \n",
     "# by looping over the values in the list. \n",
     "for item in user_list:\n",
-    "    # The seperator for each instance of print is a space rather than the default newline [2]\n",
+    "    # The seperator for each instance of print is a space rather than the default newline [Ref 2]\n",
     "    print(item, end=\" \")\n",
     "\n",
     "# Print statement to go to next line after printing the last value\n",
@@ -428,7 +397,7 @@
     "**Program Notes:**\n",
     "- The program applies the Collatz conjecture on any positive integer [[Ref 1]](#ref4.1)\n",
     "- The program will throw an error if a float type is entered. \n",
-    "- If a negative value is entered, the input message will repeat."
+    "- The input message will repeat until a positive number is entered."
    ]
   },
   {
@@ -437,8 +406,8 @@
    "metadata": {},
    "source": [
     "**References:**\n",
-    "1. The Collatz Conjecture https://www.youtube.com/watch?v=094y1Z2wpJg&t=1\n",
-    "2. Print on same line https://w3cschoool.com/tutorial/how-to-print-in-same-line-in-python"
+    "1. The Collatz Conjecture https://www.youtube.com/watch?v=094y1Z2wpJg&t=1 <a id=\"ref4.1\"></a> \n",
+    "2. Print on same line with spaces https://w3cschoool.com/tutorial/how-to-print-in-same-line-in-python"
    ]
   },
   {
@@ -483,33 +452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "a4e7062a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the datetime class from the datetime module [1]\n",
-    "from datetime import datetime\n",
-    "\n",
-    "# Assign the current date and time to dt\n",
-    "dt = datetime.now()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "ec4daa59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the weekday method to find day of week - returns an integer [1]\n",
-    "x = dt.weekday()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "0926194b",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +465,16 @@
     }
    ],
    "source": [
-    "# checks value of x - prints accordingly (Monday is 0 etc)\n",
+    "# Import the datetime class from the datetime module [Ref 1,2]\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Assign the current date and time to dt using the .now() method\n",
+    "dt = datetime.now()\n",
+    "\n",
+    "# Use the weekday method to find day of week - returns an integer between 0 and 6 [Ref 1]\n",
+    "x = dt.weekday()\n",
+    "\n",
+    "# checks value of x - prints to screen accordingly (Monday is 0 etc)\n",
     "if x == 5 or x == 6:\n",
     "    print(\"It is the weekend, yay!\")\n",
     "else:\n",
@@ -534,8 +487,257 @@
    "metadata": {},
    "source": [
     "**References:**\n",
-    "1. Find day of the week: https://pynative.com/python-get-the-day-of-week"
+    "1. Find day of the week: https://pynative.com/python-get-the-day-of-week\n",
+    "2. Importing a class versus a module https://stackoverflow.com/questions/15707532/import-datetime-v-s-from-datetime-import-datetime"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edb326f6",
+   "metadata": {},
+   "source": [
+    "- - - \n",
+    "\n",
+    "## Task 6 (squareroot.py) <a id=\"task6\"></a> <span style=\"font-size: 8pt;\"> [[TOC]](#toc)</span>\n",
+    "\n",
+    "\n",
+    "**Task Description:**\n",
+    "\n",
+    "<i>\n",
+    "Write a program that takes a positive floating-point number as input and outputs an approximation of its square root.\n",
+    "\n",
+    "You should create a function called <tt>sqrt</tt> that does this.\n",
+    "\n",
+    "I am asking you to create your own sqrt function and not to use the built in functions x ** .5 or math.sqrt(x).\n",
+    "\n",
+    "This is to demonstrate that you can research and code a process (If you really needed the square root you would use one of the above methods).\n",
+    "\n",
+    "I suggest that you look at the newton method at estimating square roots.\n",
+    "\n",
+    "This is a more difficult task than some of the others, but will be marked equally, so only do as much work on this as you feel comfortable.\n",
+    "\n",
+    "</i> \n",
+    "\n",
+    "```\n",
+    "$ python squareroot.py\n",
+    "Please enter a positive number: 14.5\n",
+    "The square root of 14.5 is approx. 3.8.\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0033fdaa",
+   "metadata": {},
+   "source": [
+    "**Program Implementation:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "501b4d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function definition to calculate the root of a function f(x):x2-a\n",
+    "# Inputs: the value from the command prompt (inputted_value) and a tolerance value (defaults to 0.0001)\n",
+    "def sqrt(a, tolerance=0.0001):\n",
+    "    \n",
+    "    # The tolerance_check value which will be used\n",
+    "    # to calculate the solution convergence needs to be initialised so it can \n",
+    "    # be used in the loop to check against the required tolerance\n",
+    "    tolerance_check = tolerance + 1   \n",
+    "    \n",
+    "    # Define an initial guess value, x0            \n",
+    "    x0 = a / 2\n",
+    "    \n",
+    "    # The loop to iterate on the solution will run while the tolerance_check is greater than\n",
+    "    # the required tolerance   \n",
+    "    while abs(tolerance_check) > tolerance:\n",
+    "        # Use Newton's method to find better approximation [Ref 1]\n",
+    "        x1 = 0.5 * (x0 + (a / x0))      \n",
+    "        # Calculate the convergence / error as the normalised difference between the x1 and x0\n",
+    "        tolerance_check = (x1 - x0) / x0\n",
+    "        # The initial value is assigned to the new value for the next iteration\n",
+    "        x0 = x1\n",
+    "    \n",
+    "    # Function returns the calculated root    \n",
+    "    return x1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7196b64c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a positive number: 123\n",
+      "The square root of 123.0 is approx. 11.1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Take in the value to be calculated and assign as float type\n",
+    "inputted_value = float(input(\"Please enter a positive number: \"))\n",
+    "# Call the function, passing the inputted_value to it.\n",
+    "sq_root = sqrt(inputted_value)\n",
+    "\n",
+    "# Print the answer to screen with required format (rounded to 1 decimal place).      \n",
+    "print(f\"The square root of {inputted_value} is approx. {round(sq_root,1)}.\")    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27a25ba4",
+   "metadata": {},
+   "source": [
+    "**Program Notes:**\n",
+    "- The program finds an approximation of a square root of a number (a) iteratively using Newton's method to approximate the root of the function $f(x):x^2-a$. This becomes: [[Ref 1]](#ref6.1)\n",
+    "\n",
+    "$$\n",
+    "x_1 = \\frac{1}{2}( x_0 + \\frac{a}{x_0})\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "where $x_0$ is an initial guess for the root and $x_1$ is a better approximation.\n",
+    "\n",
+    "- The method is implemented by iterating until a specified tolerance value is met. \n",
+    "- The tolerance value may be passed as an input to the function but defaults to 0.0001 [[Ref 2]](#ref6.2).\n",
+    "- The solution convergence is calculated by calculating the normalised difference between successive solutions [[Ref 1]](#ref6.1). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8d1be9b",
+   "metadata": {},
+   "source": [
+    "**References:**\n",
+    "1. Newton's method of finding the square root of a number: https://math.mit.edu/~stevenj/18.335/newton-sqrt.pdf <a id=\"ref6.1\"></a> \n",
+    "2. Passing a default argument to a function: https://www.w3schools.com/python/python_functions.asp <a id=\"ref6.2\"></a> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b784fe0",
+   "metadata": {},
+   "source": [
+    "- - - \n",
+    "\n",
+    "## Task 7 (es.py) <a id=\"task7\"></a> <span style=\"font-size: 8pt;\"> [[TOC]](#toc)</span>\n",
+    "\n",
+    "\n",
+    "**Task Description:**\n",
+    "\n",
+    "<i>\n",
+    "Write a program that reads in a text file and outputs the number of e's it contains. Think about what is being asked here, document any assumptions you are making.\n",
+    "\n",
+    "The program should take the filename from an **argument** on the command line. I have not shown you how to do this, you need to look it up.\n",
+    "\n",
+    "</i> \n",
+    "\n",
+    "```\n",
+    "$ python es.py moby-dick.txt\n",
+    "116960\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "603630bc",
+   "metadata": {},
+   "source": [
+    "**Program Implementation:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e95ed5eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '-f'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m char_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Open the file and ignore any errors thrown by unknown characters\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Avoids issues when reading non utf-8 encoded files [Ref 2,3].\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# With open method to open the file as a textfile in read mode\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mFILENAME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mignore\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Reading the file line by line to avoid errors with very large files\u001b[39;00m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f:\n\u001b[0;32m     17\u001b[0m        \u001b[38;5;66;03m# Convert the line to all lower case before counting 'e' so that the count isn't case-sensitive [Ref.2]\u001b[39;00m\n\u001b[0;32m     18\u001b[0m        \u001b[38;5;66;03m# dfe \u001b[39;00m\n\u001b[0;32m     19\u001b[0m        char_count \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m.\u001b[39mcount(search_char) \u001b[38;5;241m+\u001b[39m char_count\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '-f'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "#  Take the filename from the command line using the .argv method. The filename is the second item so is denoted [1]\n",
+    "FILENAME = sys.argv[1]\n",
+    "\n",
+    "# Define the character to search for\n",
+    "search_char = \"e\"\n",
+    "# Initialise the counter for the characters\n",
+    "char_count = 0\n",
+    "\n",
+    "# Open the file and ignore any errors thrown by unknown characters\n",
+    "# Avoids issues when reading non utf-8 encoded files [Ref 2,3].\n",
+    "# With open method to open the file as a textfile in read mode\n",
+    "with open(FILENAME, 'rt', errors='ignore') as f:\n",
+    "# Reading the file line by line to avoid errors with very large files\n",
+    "    for line in f:\n",
+    "       # Convert the line to all lower case before counting 'e' so that the count isn't case-sensitive [Ref.2]       \n",
+    "       char_count = line.lower().count(search_char) + char_count\n",
+    "\n",
+    "# print the number of 'e's\n",
+    "print(char_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72a681a9",
+   "metadata": {},
+   "source": [
+    "**Program Notes:**\n",
+    "- The program must be run from the command line by typing: \n",
+    "```\n",
+    "$ python es.py filename.txt\n",
+    "```\n",
+    "- Some problems were encountered with reading non utf-8 encoded text files so the optional argument \"errors\" in the open method is set to \"ignore\". [[Ref 3]](#ref7.3)[[Ref 4]](#ref7.4).\n",
+    "- The program counts the instances of \"E\" and \"e\" by converting each line to all lower-case and then counting the instances of \"e\" [[Ref 2]](#ref7.2)\n",
+    "- Sample output when the program is run:\n",
+    "```\n",
+    "$python es.py war_and_peace.txt\n",
+    "313609\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "577a6945",
+   "metadata": {},
+   "source": [
+    "**References:**\n",
+    "\n",
+    "1. Command line arguments: https://www.digitalocean.com/community/tutorials/python-command-line-arguments <a id=\"ref7.1\"></a> \n",
+    "2. Counting occurances: https://stackoverflow.com/questions/1155617/count-the-number-of-occurrences-of-a-character-in-a-string <a id=\"ref7.2\"></a> \n",
+    "3. Errors when reading files: https://stackoverflow.com/questions/9233027/unicodedecodeerror-charmap-codec-cant-decode-byte-x-in-position-y-character <a id=\"ref7.3\"></a> \n",
+    "4. Encoding differences: https://stackoverflow.com/questions/26324622/what-characters-do-not-directly-map-from-cp1252-to-utf-8 <a id=\"ref7.4\"></a> \n",
+    "5. Example text files :  https://github.com/laumann/ds/tree/master/hashing/books <a id=\"ref7.5\"></a> \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "787a4b25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
